<resources>
    <string name="app_name">SIBO</string>
    <string name="please_wait">Proszę czekać</string>
    <string name="please_click_back_again_to_exit">Naciśnij ponownie aby wyjść</string>
    <string name="my_profile_title">Mój profil</string>
    <string name="sign_in">Zaloguj się</string>
    <string name="let_s_get_started_text">Zacznijmy!</string>
    <string name="sign_up">Zarejestruj się</string>
    <string name="intro_text_description">Weź zdrowie w swoje ręce</string>
    <string name="name">Imię</string>
    <string name="email">E-mail</string>
    <string name="mobile">Numer telefonu</string>
    <string name="update">Zapisz</string>
    <string name="sign_up_description_text">Podaj imię, e-mail oraz hasło aby założyć konto</string>
    <string name="password">Hasło</string>
    <string name="image_contentDescription">image</string>
    <string name="nav_my_profile">Mój profil</string>
    <string name="nav_sign_out">Wyloguj się</string>
    <string name="baza_lekarzy_i_dietetyk_w">Baza lekarzy i dietetyków</string>
    <string name="dziennik_posi_k_w">Dziennik posiłków</string>
    <string name="breakfast">Śniadanie</string>
    <string name="lunch">II śniadanie</string>
    <string name="dinner">Obiad</string>
    <string name="snack">Podwieczorek</string>
    <string name="supper">Kolacja</string>
    <string name="add_meal">Dodaj posiłek</string>
    <string name="Meal_name">Nazwa posiłku</string>
    <string name="Meal_amount">Ilość (g)</string>
    <string name="Date">Data</string>
    <string name="add">DODAJ</string>
    <string name="cancel">ANULUJ</string>
    <string name="choose_color">Wybierz kolor: </string>
    <string name="Time">Czas</string>
    <string name="no_meal_available">Jeszcze nic nie zjadłeś</string>
    <string name="choose_emoticon">Jak się czujesz?</string>
    <string name="meal">Posiłek</string>
    <string name="edit_meal">Edytuj</string>
    <string name="save">ZAPISZ</string>
    <string name="delete">USUŃ</string>
    <string name="surname">Nazwisko</string>
    <string name="city">Miasto</string>
    <string name="rodzaj">Rodzaj</string>
    <string name="ocena">Ocena</string>
    <string name="add_specialist">Dodaj specjalistę</string>
    <string name="comment">Komentarz</string>
    <string name="dietetician">Dietetyk</string>
    <string name="doctor">Lekarz</string>
    <string name="choose_type_specialist">Wybierz zawód:</string>
    <string name="choose_rate">Ocena (w skali 1-5)</string>
    <string name="rate">OCEŃ</string>
    <string name="your_rate">Twoja ocena</string>
    <string name="no_rates">Brak ocen</string>
    <string name="remember_password">Nie pamiętam hasła</string>
    <string name="reset_password">Resetuj hasło</string>
    <string name="reset_password_text">Podaj adres e-mail przypisany do konta</string>
    <string name="search_hint">Wyszukaj</string>
    <string name="instruction">Instrukcja (PDF)</string>
    <string name="title_activity_maps">Map</string>
    <string name="dropped_pin">Wybrane miejsce</string>
</resources>