<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="none">

    <item android:id="@+id/nav_food"
        android:icon="@drawable/ic_nav_food"
        android:title="@string/dziennik_posi_k_w"/>
    <item android:id="@+id/nav_doctors"
        android:icon="@drawable/ic_nav_doctors"
        android:title="@string/baza_lekarzy_i_dietetyk_w"/>
    <item android:id="@+id/nav_my_profile"
        android:icon="@drawable/ic_nav_user"
        android:title="@string/nav_my_profile"/>
    <item android:id="@+id/nav_sign_out"
        android:icon="@drawable/ic_nav_sign_out"
        android:title="@string/nav_sign_out"/>
    <item android:id="@+id/nav_instruction"
        android:icon="@drawable/ic_baseline_library_books_24"
        android:title="@string/instruction"/>
</group>
</menu>