<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_background"
    android:padding="@dimen/btn_paddingTopBottom"
    tools:context=".activities.SpecialistDetailsActivity">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:background="@color/white"
        android:scaleType="center"
        android:src="@drawable/ic_baseline_close_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/btn_paddingTopBottom">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_specialist_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textSize="@dimen/et_text_size"
                    android:textStyle="bold"
                    tools:layout_width="wrap_content">

                </TextView>

                <TextView
                    android:id="@+id/tv_specialist_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/btn_paddingTopBottom"
                    android:hint="@string/surname"
                    android:textSize="@dimen/et_text_size"
                    android:textStyle="bold"
                    tools:layout_width="wrap_content">

                </TextView>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_specialist_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city">

            </TextView>

            <TextView
                android:id="@+id/tv_specialist_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rodzaj">

            </TextView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="@dimen/btn_paddingTopBottom">

            <TextView
                android:id="@+id/tv_specialist_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/btn_paddingTopBottom"
                android:hint="@string/ocena"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_rate_specialist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/btn_paddingTopBottom"
        android:text="@string/rate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/btn_paddingTopBottom">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comment">

            </TextView>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="@dimen/btn_paddingTopBottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/btn_paddingTopBottom"
                android:text="@string/ocena"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_comments_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>


    <TextView
        android:id="@+id/tv_no_rates_available"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_rates"
        android:textColor="@color/secondary_text_color"
        android:textSize="20dp"
        android:visibility="gone" />
</LinearLayout>
