<?xml version="1.0" encoding="UTF-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_dialog_rounded"
        app:cardCornerRadius="@dimen/dialog_member_cv_cornerRadius"
        app:cardElevation="@dimen/dialog_member_cv_elevation">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dialog_member_content_padding">

            <TextView
                android:id="@+id/tvDialogTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dialog_member_title_padding"
                android:text="@string/add_meal"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/dialog_member_title_text_size"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/member_dialog_divider_height"
                android:layout_marginTop="@dimen/member_dialog_divider_marginTopBottom"
                android:layout_marginBottom="@dimen/member_dialog_divider_marginTopBottom"
                android:background="@color/divider_color" />


            <EditText
                android:id="@+id/et_meal_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/member_dialog_divider_marginTopBottom"
                android:focusable="false"
                android:hint="@string/Date"
                android:inputType="none"
                android:textSize="@dimen/et_text_size" />

            <EditText
                android:id="@+id/et_meal_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/member_dialog_divider_marginTopBottom"
                android:focusable="false"
                android:hint="@string/Time"
                android:inputType="none"
                android:textSize="@dimen/et_text_size" />


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/meal_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/member_dialog_divider_marginTopBottom" />


            <EditText
                android:id="@+id/et_meal_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/member_dialog_divider_marginTopBottom"
                android:hint="@string/Meal_name"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/et_text_size" />


            <EditText
                android:id="@+id/et_meal_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/member_dialog_divider_marginTopBottom"
                android:hint="@string/Meal_amount"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/et_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="@dimen/btn_paddingTopBottom">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/choose_color" />

                <View
                    android:id="@+id/color_meal_view"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@color/black" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/member_dialog_action_layout_height"
                android:layout_marginTop="@dimen/member_dialog_action_layout_marginTop"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_add"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="@dimen/member_dialog_action_button_padding"
                    android:text="@string/add"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/member_dialog_action_button_text_size" />

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="@dimen/member_dialog_action_button_padding"
                    android:text="@string/cancel"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="@dimen/member_dialog_action_button_text_size" />


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>