<?xml version="1.0" encoding="UTF-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".activities.IntroActivity">

    <TextView
        android:id="@+id/tv_app_name_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/intro_screen_title_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/jelita_250"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name_intro" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:text="@string/let_s_get_started_text"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/lets_get_started_text_size"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/intro_text_line_spacing_extra"
        android:text="@string/intro_text_description"
        android:textColor="@color/secondary_text_color"
        android:textSize="@dimen/intro_text_size"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in_intro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in_intro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/shape_button_rounded"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_up_intro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up_intro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="33dp"
        android:background="@drawable/white_border_shape_button_rounded"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:text="@string/sign_up"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/btn_paddingTopBottom"
        android:text="@string/remember_password"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btn_sign_up_intro"
        app:layout_constraintStart_toStartOf="@id/btn_sign_up_intro"
        android:foreground="?attr/selectableItemBackground"/>

</androidx.constraintlayout.widget.ConstraintLayout>