<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:paddingBottom="3dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    app:cardCornerRadius="5dp"
    android:orientation="vertical"
    android:background="?attr/selectableItemBackground"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/list_background"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/btn_paddingTopBottom">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_specialist_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textSize="@dimen/et_text_size"
                    android:textStyle="bold"
                    tools:layout_width="wrap_content">

                </TextView>

                <TextView
                    android:id="@+id/tv_specialist_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/btn_paddingTopBottom"
                    android:hint="@string/surname"
                    android:textSize="@dimen/et_text_size"
                    android:textStyle="bold"
                    tools:layout_width="wrap_content">

                </TextView>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_specialist_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "Adres">

            </TextView>

            <TextView
                android:id="@+id/tv_specialist_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rodzaj">

            </TextView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="@dimen/btn_paddingTopBottom">

            <TextView
                android:id="@+id/tv_specialist_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/btn_paddingTopBottom"
                android:hint="@string/ocena"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_color"
        android:layout_gravity="bottom"/>

</LinearLayout>